--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma": "^0.13.22",
     "karma-cli": "^0.1.2",
     "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8"
+    "karma-jasmine": "^0.3.8",
+    "multiple-select": "^1.2.0"
   }
 }
